# medicinainteligente

./: .replit  main.py  pyproject.toml  replit.md
app/: __init__.py  models.py
app/asr/: __init__.py  client.py
app/nlp/: __init__.py  pipeline.py  rules.py
app/panels/: __init__.py  orchestrator.py
attached_assets/: Pasted-Ideia-manter-o-MediaStream-aberto-o-tempo-todo-mas-parar-e-recriar-o-MediaRecorder-a-cada-5-8s-Ca-1759014826491_1759014826494.txt
static/: index.html
tests/: test_audio_queue.py
